--- a/SharedModules/pom.xml
+++ b/SharedModules/pom.xml
@@ -2,19 +2,28 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
+
     <parent>
         <groupId>com.E-Shop.Microservices</groupId>
         <artifactId>E-Shop-Microservices</artifactId>
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
-
     </parent>
 
-    <groupId>org.programming.techie</groupId>
-    <artifactId>UserService</artifactId>
-    <packaging>jar</packaging>
-    <name>UserService</name>
 
+    <groupId>org.eureka</groupId>
+    <artifactId>Shared-Modules</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <name>Shared-Modules</name>
+
+<dependencies>
+
+
+
+
+</dependencies>
 
     <dependencyManagement>
         <dependencies>
@@ -34,16 +43,6 @@
             <url>https://repo.spring.io/libs-milestone</url>
         </repository>
     </repositories>
-
-    <dependencies>
-
-        <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-eureka-client -->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        </dependency>
-
-    </dependencies>
 
 
 </project>
