--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 
 	<properties>
 		<java.version>17</java.version>
+		<spring-cloud.version>2023.0.1</spring-cloud.version>
 	</properties>
 	<dependencies>
 		<dependency>
